--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="logo.png">
     <style>
+        * {
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+
         :root {
             --primary: #4A90E2;
             --accent: #FF6B6B;
@@ -22,8 +27,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(to bottom, #fdfbfb 0%, #ebedee 100%);
-            /* Clean, premium white/grey */
+            background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
             color: var(--text-dark);
             margin: 0;
             min-height: 100vh;
@@ -31,27 +35,23 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding: 0;
             overflow-x: hidden;
+            padding: 20px 0 80px 0;
+            transition: background 1s ease;
+            width: 100%;
         }
 
-        /* Full Screen Mobile Container */
+        /* Glassmorphism Container */
         .glass-panel {
-            background: rgba(255, 255, 255, 0.85);
-            /* Slightly more opaque for clean look */
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            border: none;
-            border-radius: 0;
-            padding: 20px;
-            padding-top: calc(20px + env(safe-area-inset-top));
-            padding-bottom: 100px;
-            /* Space for footer */
-            width: 100%;
-            max-width: 600px;
-            /* Keep constrained on desktop but full on mobile */
-            min-height: 100vh;
-            box-shadow: none;
+            background: var(--glass-bg);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 24px;
+            padding: 30px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: var(--glass-shadow);
             position: relative;
             z-index: 10;
             text-align: center;
